--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,64 @@
+aiohttp==3.8.3
+aiosignal==1.2.0
+appscript==1.2.2
+async-timeout==4.0.2
+attrs==22.1.0
+autopep8==2.0.0
+beautifulsoup4==4.12.2
 bidict==0.22.1
 blinker==1.7.0
+certifi==2022.9.24
+charset-normalizer==2.1.1
 click==8.1.7
+discord.py==2.0.1
+docx2pdf==0.1.8
+EasyProcess==1.1
+entrypoint2==1.1
+et-xmlfile==1.1.0
 Flask==3.0.0
 Flask-SocketIO==5.3.6
+frozenlist==1.3.1
 greenlet==3.0.1
 h11==0.14.0
+idna==3.4
 itsdangerous==2.1.2
 Jinja2==3.1.2
+lxml==4.9.3
 MarkupSafe==2.1.3
+MouseInfo==0.1.3
+mss==9.0.1
+multidict==6.0.2
+openpyxl==3.1.2
+Pillow==9.5.0
+psycopg2-binary==2.9.9
+PyAutoGUI==0.9.54
+pycodestyle==2.10.0
+PyGetWindow==0.0.9
+PyMsgBox==1.0.9
+pyobjc-core==9.2
+pyobjc-framework-Cocoa==9.2
+pyobjc-framework-Quartz==9.2
+pyperclip==1.8.2
+PyRect==0.2.0
+pyscreenshot==3.1
+PyScreeze==0.1.29
+python-docx==1.0.1
+python-dotenv==0.21.0
 python-engineio==4.8.0
 python-socketio==5.10.0
+pytweening==1.0.7
+pywhatkit==5.4
+requests==2.28.1
+rubicon-objc==0.4.6
 simple-websocket==1.0.0
+soupsieve==2.4.1
 SQLAlchemy==2.0.23
 SQLAlchemy-serializer==1.4.1
+tomli==2.0.1
+tqdm==4.66.1
 typing_extensions==4.8.0
+urllib3==1.26.12
 Werkzeug==3.0.1
+wikipedia==1.4.0
 wsproto==1.2.0
+yarl==1.8.1
