--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+aniso8601==9.0.1
 bidict==0.22.1
 blinker==1.7.0
 click==8.1.7
@@ -10,7 +11,9 @@ Jinja2==3.1.2
 MarkupSafe==2.1.3
 python-engineio==4.8.0
 python-socketio==5.10.0
+pytz==2023.3.post1
 simple-websocket==1.0.0
+six==1.16.0
 SQLAlchemy==2.0.23
 SQLAlchemy-serializer==1.4.1
 typing_extensions==4.8.0
