--- a/.gitignore
+++ b/.gitignore
@@ -5,4 +5,5 @@ data/main.db
 __pycache__/socket_func.cpython-310.pyc
 .gitignore
 data/__pycache__/db_func.cpython-310.pyc
-.gitignore
+.idea
+data/main.db
